add new websocket connection

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,8 @@
     </div>
 
     <script>
-
+        // new web socket connection
+        let ws = new WebSocket('ws://localhost:4000/websocket')
     </script>
 </body>
 </html>
