--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,32 @@
     <script>
         // new web socket connection
         let ws = new WebSocket('ws://localhost:4000/websocket')
+
+        // dom refs
+        const nameForm = document.querySelector('.name-form')
+        const chatroom = document.querySelector('.chatroom')
+        const chatList = document.querySelector('chat-list')
+        const chatForm = document.querySelector('chat-form')
+
+        // name
+        let name = 'anonymous'
+
+        // enter chatroom w/ name
+        nameForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            name = nameForm.nickname.value;
+            nameForm.classList.add('hidden');
+            chatroom.classList.remove('hidden');
+        });
+
+        // send a new chat
+        chatForm.addEventListener('submit', (e) => {
+            e.preventDefault()
+
+            let msg = chatForm.msg.value
+            ws.send(JSON.stringify({ name, msg }))
+        })
     </script>
 </body>
 </html>
