--- a/public/index.html
+++ b/public/index.html
@@ -78,12 +78,7 @@
         </form>
 
         <div class="chatroom hidden">
-            <ul class="chat-list">
-                <li>
-                    <div class="name">Upin</div>
-                    <div class="msg">Hai</div>
-                </li>
-            </ul>
+            <ul class="chat-list"></ul>
             <form class="chat-form">
                 <input type="text" name="msg" placeholder="Type some message" required>
                 <button>Send</button>
@@ -98,8 +93,8 @@
         // dom refs
         const nameForm = document.querySelector('.name-form')
         const chatroom = document.querySelector('.chatroom')
-        const chatList = document.querySelector('chat-list')
-        const chatForm = document.querySelector('chat-form')
+        const chatList = document.querySelector('.chat-list')
+        const chatForm = document.querySelector('.chat-form')
 
         // name
         let name = 'anonymous'
@@ -120,6 +115,23 @@
             let msg = chatForm.msg.value
             ws.send(JSON.stringify({ name, msg }))
         })
+
+        // output event to dom
+        const outputMessage = ({ data }) => {
+            const { name, msg } = JSON.parse(data)
+
+            let templateChat = `
+                <li>
+                    <div class="name">${name}</div>
+                    <div class="msg">${msg}</div>
+                </li>
+            `
+
+            chatList.innerHTML += templateChat
+        }
+
+        // setup listener
+        ws.addEventListener('message', outputMessage)
     </script>
 </body>
 </html>
