--- a/public/index2.html
+++ b/public/index2.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino Chat</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <style>
+    <link rel="stylesheet" href="style.css">
+    <!-- <style>
         body{
             background: #eee;
             margin: 40px;
@@ -66,7 +67,7 @@
         .hidden{
             display: none;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <div class="container">
